# PortAudioPlusPlus

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
inc/port_audio_plus_plus/: Audio.hpp  AudioConfig.hpp  AudioDevice.hpp  PortAudioPlusPlus.hpp
src/: Audio.cpp  AudioConfig.cpp  AudioDevice.cpp  CMakeLists.txt
